[package]
name = "solana-test-utils"
version = "0.1.18"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
solana-sdk = "1.9.5"
solana-program-test = "1.8.0"
anchor-lang = { version = "0.21.0", features = ["init-if-needed"] }
anchor-spl = "0.21.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
borsh = "0.9"
rs_merkle = "1.1.0"
futures = "0.3"
solana-program-runtime = "1.9.6"
