[package]
name = "solana-test-utils"
version = "0.2.7"
edition = "2018"
authors = ["Pavlos Polianidis <info@apocentre.com>"]
repository = "https://github.com/Apocentre/solana-safe-math"
description = "Helper crate that can be used when writing tests against Solana (and more specifically Anchor) programs."
homepage = "https://github.com/Apocentre/solana-test-utils"
documentation = "https://docs.rs/solana-test-utils/"
readme = "README.md"
keywords = ["solana", "blockchain", "test", "anchor"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
solana-sdk = "1.9.5"
solana-program-test = "1.8.0"
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
borsh = "0.9"
rs_merkle = "1.1.0"
futures = "0.3"
solana-program-runtime = "1.9.6"
